Docs: Updated content block features (#707)
* Draft for new pages

* Renaming topic page

* Add text blocks done

* Manage text block library done

* Editing add text blocks

* New add content block gif

* Gif update again

* Updated selection menu text & img

* Save point

* Generate with AI adjust

* New Generate with AI gif

* Block removal edit

* Edited test result display config

* Edited developer training for new content blocks

* Fixed training registration JH link

* Updating guides listings

* Editing

* New templates section

* 1st round of link checks

* 2nd round of link checks

* Guides listings edit

* Editing text blocks callout

* Typo

* Editing lead-in

--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -11,10 +11,12 @@ Make edits to your model documentation, validation reports, or ongoing monitorin
 
 Content blocks provide you with sections that are part of a template, and are used in model documentation, validation reports, and ongoing monitoring plans.
 
-- You can think of these sections as an empty canvas that you fill in with text and test results. 
-- Multiple sections are joined to create a longer document with a table of contents that has different heading and subheading levels, such as "1.," "1.1.," and so on. 
+- You can think of these sections as an empty canvas that you fill in with text and test results.
+- Multiple sections are joined to create a longer document with a table of contents that has different heading and subheading levels, such as "1.," "1.1.," and so on.
 
 #### Content block types
+
+Content blocks can be new, blank blocks, or prepopulated via your library of logged test or metric results and text block templates:
 
 {{< include content_blocks/_simple-text-block.qmd >}}
 
@@ -53,13 +55,16 @@ Use {{< var vm.product >}} to assist you with generating content via AI!^[[Gener
 
 {{< include /guide/model-documentation/_add-content-block.qmd >}}
 
-5. Click {{< fa square-plus >}} and then select one of the available options: 
-    
-    - **Text** — Adds a new section with a blank content block. After the new content block has been added, click {{< fa pencil >}} to edit the contents of the section like any other.
-    - **Test-Driven**[^5] — Adds a new section with test results. 
-    - **Metric Over Time**[^6] — Adds a new section with metric over time results.
+6. Click {{< fa square-plus >}} and then select one of the available options:
 
-6. After adding the block to your documentation, click on the text to make changes or add comments.[^7]
+   a. [new]{.smallcaps}:
+      - **Text Block** — Adds a new section with a blank content block.
+   b. [from library]{.smallcaps}:
+      - **Text Block** — Inserts a text block from a template in your block library.[^5] Select the reusable blocks you want to add, then click **Insert # Text Block(s) to Document**.
+      - **Test-Driven**[^6] — Adds a new section with logged test results.
+      - **Metric Over Time**[^7] — Adds a new section with logged metric over time results.
+
+7. After adding the block to your documentation, click on the text to make changes or add comments.[^8]
 
 ### Add mathematical formulas
 
@@ -67,10 +72,10 @@ While editing a simple text block, you can insert math equations using the formu
 
 1. Click **$f(x)$** in the toolbar while editing a content block.
 
-2. Enter your LaTeX formula in the text box and confirm that the Equation preview generates as expected: 
+2. Enter your LaTeX formula in the text box and confirm that the Equation preview generates as expected:
 
    - To insert the equation inline, leave **Display mode** untoggled.
-   - To insert the equation on its own line, toggle **Display mode** on. 
+   - To insert the equation on its own line, toggle **Display mode** on.
 
 ::: {.column-margin}
 ![Equation preview in the formula editor](equation-preview.png){fig-alt="A screenshot showing the equation preview in the formula editor" .screenshot group="latex"}
@@ -84,7 +89,7 @@ While editing a simple text block, you can insert math equations using the formu
 ### Generate Text with AI <sup>[beta]{.smallcaps}</sup>
 
 ::: {.callout title="Have you logged your tests?"}
-Generating content drafts for your model documentation works best after you've logged tests and test descriptions for your model's tests with the {{< var validmind.developer >}},[^8] as existing test descriptions provide more context for the large language model (LLM) to draw upon.
+Generating content drafts for your model documentation works best after you've logged tests and test descriptions for your model's tests with the {{< var validmind.developer >}},[^9] as existing test descriptions provide more context for the large language model (LLM) to draw upon.
 
 :::
 
@@ -92,8 +97,7 @@ While editing a simple text block, you can have {{< var vm.product >}} assist yo
 
 {{< include content_blocks/_generate-with-ai.qmd >}}
 
-When generating content drafts with AI, accepted versions and edits are retained in your {{< fa wifi >}} Model Activity[^9] just like other updates to your documentation, reports, or plans. 
-
+When generating content drafts with AI, accepted versions and edits are retained in your {{< fa wifi >}} Model Activity[^10] just like other updates to your documentation, reports, or plans. 
 
 ## Remove content blocks
 
@@ -103,26 +107,17 @@ Test-driven or metric over time blocks can be re-added later on but **text block
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^10]
+2. Select a model or find your model by applying a filter or searching for it.[^11]
 
 3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**, **{{< fa shield >}} Validation Report**, or **{{< fa desktop >}} Ongoing Monitoring**.
 
-   You can now jump to any section of the model documentation or validation report by expanding the table of contents on the left and selecting the relevant section, such as **1.1 Model Overview**. 
+4. Click on a section header to expand that section and remove content.
 
-4. Select the block you wish to remove from the model documentation.
+5. Locate the block you wish to remove, and hover over it until the block's toolbar appears in the top right-hand corner.
 
-5. Click on {{< fa trash-can >}} located in either one of these locations:
+6. Select **{{< fa trash >}} Delete** to remove the block.
 
-   - In the toolbar for text blocks
-   
-   ![Deleting a content block via the text toolbar](remove-text-block.gif){fig-alt="A gif showing the process of deleting a content block via the text toolbar" .screenshot group="delete"}
-
-   - In the single-button toolbar for test-driven or metric over time blocks
-
-   ![Deleting a content block via the single-button toolbar for test-driven blocks](remove-test-driven-block.gif){fig-alt="A gif showing the process of deleting a content block via the single-button toolbar for test-driven blocks" .screenshot group="delete"}
-
-
-6. After you confirm, the content block is removed. 
+7. After you confirm, the content block will be deleted.
 
 ## What's next
 
@@ -142,14 +137,16 @@ Test-driven or metric over time blocks can be re-added later on but **text block
 
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^5]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
+[^5]: [Manage text block library](/guide/templates/manage-text-block-library.qmd)
 
-[^6]: [Work with metrics over time](/guide/monitoring/work-with-metrics-over-time.qmd)
+[^6]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
 
-[^7]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
+[^7]: [Work with metrics over time](/guide/monitoring/work-with-metrics-over-time.qmd)
 
-[^8]: [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
+[^8]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
 
-[^9]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
+[^9]: [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
 
-[^10]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^10]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
+
+[^11]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
