--- a/site/guide/model-documentation/work-with-test-results.qmd
+++ b/site/guide/model-documentation/work-with-test-results.qmd
@@ -12,7 +12,7 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] Test results have already been documented via the {{< var validmind.developer >}} for your model.[^1] 
+- [x] Test results have already been documented via the {{< var validmind.developer >}} for your model.[^1]
 - [x] You are a [{{< fa code >}} Developer]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^2]
 
 :::
@@ -22,24 +22,37 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 
 {{< include /guide/model-documentation/_add-content-block.qmd >}}
 
-5. Click {{< fa square-plus >}} and then select **Test-Driven**.[^3]
+5. Click {{< fa square-plus >}} and then select **Test-Driven**[^3] under [from library]{.smallcaps}.
 
     - By default, the [{{< fa code >}} Developer]{.bubble} role can add test-driven blocks within model documentation or ongoing-monitoring plans.
     - By default, the [{{< fa circle-check >}} Validator]{.bubble} role can add test-driven blocks within validation reports. 
 
 6. Select test results:
 
-   - Select the tests to insert into the model documentation from the list of available tests.
-   - Search by name using **{{<fa magnifying-glass >}} Search** on the top-left to locate specific test results.
+   - Choose from available **VM Library** (out-of-the-box) or **Custom** tests under [test-driven]{.smallcaps} in the left sidebar of the test selection modal.
+   - Use **{{<fa magnifying-glass >}} Search by name** on the top-left to locate specific test results.
 
-    ![Test-driven blocks that have been selected for insertion](test-driven-block-menu.png){width=85% fig-alt="A screenshot showing several test-driven blocks that have been selected for insertion" .screenshot}
+    ![Test-driven blocks that have been selected for insertion](test-driven-block-menu.png){fig-alt="A screenshot showing several test-driven blocks that have been selected for insertion" .screenshot}
 
    To preview what is included in a test, click on it. By default, the actively selected test is reviewed.
 
 7. Click **Insert # Test Results to Document** when you are ready.
 
-8. After inserting the results into your document, click on the text to make changes or add comments.[^4]
+8. After inserting the results into your document, click on the text to make changes or add comments,[^4] or configure what is displayed on the test result.[^5]
 
+### Configure test result displays
+
+Once added to your model documentation, validation reports, and ongoing monitoring reports, configure how the logged test results are displayed:
+
+1. Locate the test result whose display you want to configure, and hover over it until the result block's toolbar appears in the top right-hand corner.
+
+2. Select **{{< fa gear >}} Configure** and toggle the following options on or off as desired:[^6]
+
+    - **[hide title]{.smallcaps}** — Title
+    - **[hide text]{.smallcaps}** — Description
+    - **[hide parameters]{.smallcaps}** — Parameters
+    - **[hide tables]{.smallcaps}** — Tables
+    - **[hide figures]{.smallcaps}** — Figures
 
 ## View test result metadata
 
@@ -47,7 +60,7 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model by clicking on it or find your model by applying a filter or searching for it.[^5]
+2. Select a model by clicking on it or find your model by applying a filter or searching for it.[^7]
 
 3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**, **{{< fa shield >}} Validation Report**, or **{{< fa desktop >}} Ongoing Monitoring**.
 
@@ -57,7 +70,7 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 
 By default, test result metadata are sorted by date run in descending order. The latest result is automatically indicated as [Active]{.green-bg}. 
 
-To narrow down test runs, you can apply some filters: 
+To narrow down test runs, you can apply some filters:
 
 1. On the detail expansion for test result metadata, click **{{< fa filter >}} Filter**.
 
@@ -94,4 +107,17 @@ Filters can be removed from the list of test result metadata by clicking on the 
 
 [^4]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
 
-[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^5]: [Configure test result displays](#configure-test-result-displays)
+
+[^6]:
+
+    ::: {.callout}
+    ## Options displayed for each test result will depend on what was logged via the {{< var validmind.developer >}} for your test.
+
+    You can also adjust what is displayed on a test result directly via the {{< var vm.developer >}}:
+
+    [result.log()](/validmind/validmind/vm_models.qmd#log){.button .button-green}
+
+    :::
+
+[^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
