--- a/site/guide/templates/working-with-documentation-templates.qmd
+++ b/site/guide/templates/working-with-documentation-templates.qmd
@@ -9,14 +9,14 @@ listing:
     fields: [title, description]
     contents:
       - view-documentation-templates.qmd
-#      - import-documentation-templates.qmd
       - customize-documentation-templates.qmd
       - swap-documentation-templates.qmd
 aliases:
   - /guide/working-with-documentation-templates.html
+  - /guide/model-documentation/working-with-documentation-templates.html
 ---
 
-Documentation templates offer a standardized approach to creating consistent and comprehensive model documentation and validation reports. You customize these templates to fit your specific case-by-case needs.
+Use {{< var vm.product >}}'s versioned documentation templates to ensure consistent and comprehensive model documentation, validation reports, and ongoing monitoring reports across all your models. 
 
 :::{#documentation-templates}
 :::
