--- a/site/guide/guides.qmd
+++ b/site/guide/guides.qmd
@@ -48,8 +48,15 @@ listing:
     sort: false
     fields: [title, description]
     contents: 
-    - model-documentation/working-with-documentation-templates.qmd
     - model-documentation/working-with-model-documentation.qmd
+  - id: guides-templates
+    type: grid
+    max-description-length: 250
+    sort: false
+    contents: 
+    - templates/working-with-documentation-templates.qmd
+    - templates/manage-text-block-library.qmd
+    fields: [title, description]
   - id: guides-developer
     type: grid
     max-description-length: 250
@@ -58,13 +65,21 @@ listing:
     contents: 
     - ../developer/validmind-library.qmd
     - ../developer/samples-jupyter-notebooks.qmd
-  - id: guides-model-validation
+  - id: guides-validator
     type: grid
     max-description-length: 250
     sort: false
     fields: [title, description]
     contents: 
     - model-validation/manage-validation-guidelines.qmd
+    - templates/working-with-documentation-templates.qmd
+    - templates/manage-text-block-library.qmd
+  - id: guides-model-validation
+    type: grid
+    max-description-length: 250
+    sort: false
+    fields: [title, description]
+    contents: 
     - model-validation/preparing-validation-reports.qmd
     - model-validation/working-with-model-findings.qmd
   - id: guides-reports
@@ -75,8 +90,16 @@ listing:
     max-description-length: 250
     sort: false
     fields: [title, description]
-  - id: guides-monitoring
+  - id: guides-monitoring-templates
+    type: grid
+    max-description-length: 250
+    sort: false
     contents: 
+    - templates/working-with-documentation-templates.qmd
+    - templates/manage-text-block-library.qmd
+    fields: [title, description]
+  - id: guides-monitoring
+    contents:
     - monitoring/ongoing-monitoring.qmd
     type: grid
     max-description-length: 250
@@ -109,7 +132,6 @@ Before you begin, let's make sure you're able to access {{< var vm.product >}}:
 
 Onboard your organization, teams or business units, and users onto the {{< var validmind.platform >}}:
 
-
 :::{#guides-onboarding}
 :::
 
@@ -132,21 +154,31 @@ Use the {{< var validmind.platform >}} model inventory to thoroughly track your 
 :::{#guides-model-inventory}
 :::
 
-## Model documentation 
+## Model documentation
 
-First, document and test your models in your own model development environment with the {{< var validmind.developer >}}:
+First, customize your model documentation templates and reusable blocks:
+
+:::{#guides-templates}
+:::
+
+Then, document and test your models in your own model development environment with the {{< var validmind.developer >}}:
 
 :::{#guides-developer}
 :::
 
-Then, work with documentation and customizable templates, and collaborate with model validators all within the {{< var validmind.platform >}}: 
+Finally, refine your model documentation, and collaborate with model validators all within the {{< var validmind.platform >}}:
 
 :::{#guides-model-documentation}
 :::
 
 ## Model validation
 
-Set up validation guidelines and prepare validation reports, work with findings and evidence, and collaborate with model developers within the {{< var vm.platform >}}:
+First, set up validation guidelines, customizable report templates, and reusable blocks:
+
+:::{#guides-validator}
+:::
+
+Then, prepare validation reports, work with findings and evidence, and collaborate with model developers within the {{< var validmind.platform >}}:
 
 :::{#guides-model-validation}
 :::
@@ -160,7 +192,13 @@ Review reports or export your documentation for external records:
 
 ## Monitoring
 
-Regularly evaluate the ongoing accuracy, robustness, and stability of a model after it has been deployed:
+First, customize your ongoing report templates and reusable blocks:
+
+:::{#guides-monitoring-templates}
+:::
+
+
+Then, regularly evaluate the ongoing accuracy, robustness, and stability of a model after it has been deployed:
 
 :::{#guides-monitoring}
 :::
