--- a/site/guide/configuration/_manage-roles.qmd
+++ b/site/guide/configuration/_manage-roles.qmd
@@ -33,9 +33,9 @@
 
 ##### Add role to user
 
-   1. Click **+** to open the Assign Roles menu for that user. 
+   1. Click **{{< fa plus >}}** to open the Assign Roles menu for that user. 
 
-   1. Click **+** next to the role for each role to be assigned.  
+   1. Click **{{< fa plus >}}** next to the role for each role to be assigned.  
 
    1. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
 
@@ -82,9 +82,9 @@
 
 ##### Add role to user
 
-   1. Click **+** to open the Assign Roles menu for that user. 
+   1. Click **{{< fa plus >}}** to open the Assign Roles menu for that user. 
 
-   1. Click **+** next to the role for each role to be assigned.  
+   1. Click **{{< fa plus >}}** next to the role for each role to be assigned.  
 
    1. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
 
