--- a/site/guide/model-inventory/register-models-in-inventory.qmd
+++ b/site/guide/model-inventory/register-models-in-inventory.qmd
@@ -31,7 +31,7 @@ If no additional fields are required on registration for your models:
 
 1.  Provide the information outlined in the basic model information fields table below.
 
-2. Click **Register Model** to create a new entry in the model inventory.
+2. Click **{{< fa plus >}} Register Model** to create a new entry in the model inventory.
 
 | Field | Description | 
 |---:|---|
@@ -57,7 +57,7 @@ If additional fields are required on model registration for your organization:
 
 2. Fill in your organization's required additional fields.
 
-3. Click **Register Model** to create a new entry in the model inventory.
+3. Click **{{< fa plus >}} Register Model** to create a new entry in the model inventory.
 
 ## What's next
 
