--- a/site/guide/model-workflows/set-up-model-workflows.qmd
+++ b/site/guide/model-workflows/set-up-model-workflows.qmd
@@ -64,7 +64,7 @@ When a workflow is edited, the new flow will only apply to new models created af
 |---:|---|
 | [display action button when]{.smallcaps}  (optional) | Add conditional requirements for displaying this step.[^6]  |
 | [action button label]{.smallcaps} | Text that displays on your action button. |
-| [request fields]{.smallcaps}  (optional) | Include inventory fields alongside your action if desired. Select the field, then click **+ Add Field** to insert.[^7]  |
+| [request fields]{.smallcaps}  (optional) | Include inventory fields alongside your action if desired. Select the field, then click **{{< fa plus >}} Add Field** to insert.[^7]  |
 | [to set status]{.smallcaps} | Select the status to transition to. |
 : **User Action** step configuration {.hover tbl-colwidths="[40,60]"}
 
@@ -152,7 +152,7 @@ Workflows cannot be saved until condition branches are connected to other steps.
 
 To configure a condition branch:
 
-1. On the Configure Condition Branch modal, click **+ Add Branch**.
+1. On the Configure Condition Branch modal, click **{{< fa plus >}} Add Branch**.
 2. Enter in the **[path name]{.smallcaps}** and designate the **[conditions]{.smallcaps}**[^12] that apply to this path.
 3. Continue with steps 1 and 2 until your conditional branch logic is complete.
 
