--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -406,9 +406,9 @@ With the test results logged, let's head to the model we connected to at the beg
 
 3. Locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
 
-4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **+** button appears, indicating that you can insert a new block.
+4. Hover under the Pearson Correlation Matrix content block until a horizontal dashed line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
 
-5. Click **+** and then select **Test-Driven Block** under [from library]{.smallcaps}:
+5. Click **{{< fa plus >}}** and then select **Test-Driven Block** under [from library]{.smallcaps}:
 
     - Click on **VM Library** under [test-driven]{.smallcaps} in the left sidebar.
     - In the search bar, type in `HighPearsonCorrelation`.
