--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -58,7 +58,7 @@ First, let's make sure you can log in to {{< var vm.product >}}.
 
 ### Registration
 
-To continue, you need to have been [onboarded](developer-fundamentals-register.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa circle-check >}} Validator**]{.bubble} role.
+To continue, you need to have been [onboarded](validator-fundamentals-register.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa circle-check >}} Validator**]{.bubble} role.
 
 <br>
 
@@ -204,7 +204,7 @@ you for validation.
 
 For this training course, <br>
 we'll have you register a dummy model <br>
-via the **+ Register Model** modal <br>
+via the **{{< fa plus >}} Register Model** modal <br>
 and assign yourself as the validator <br>
 to familiarize you with the <br>
 {{< var validmind.platform >}} interface.
@@ -230,7 +230,7 @@ for a new model:
   You can fill in other options<br> according to your preference.
 :::
 
-2. Click **Register Model** to <br>
+2. Click **{{< fa plus >}} Register Model** to <br>
 add the model to your <br>
 inventory.
 
