--- a/site/guide/configuration/_manage-permissions.qmd
+++ b/site/guide/configuration/_manage-permissions.qmd
@@ -1,10 +1,10 @@
 1. Under User Permissions, select **{{< fa screwdriver-wrench >}} Permissions**.
 
 1. Add or delete roles from a specific permission:
-    - To assign a role to a permission, click **+**, then select the permission from the drop-down menu.
+    - To assign a role to a permission, click **{{< fa plus >}}**, then select the permission from the drop-down menu.
     - To remove a role from a permission, click **{{< fa x >}}** next to the specified role.
 
     For example, to grant the [{{< fa code >}} Developer]{.bubble} role the permission to update an existing template:
     
     1. Locate **Update Template** under {{< fa clipboard >}} Template. 
-    1. Click **+** and select [**{{< fa code >}} Developer**]{.bubble} from the drop-down menu.
+    1. Click **{{< fa plus >}}** and select [**{{< fa code >}} Developer**]{.bubble} from the drop-down menu.
