--- a/site/guide/configuration/_manage-users-invite.qmd
+++ b/site/guide/configuration/_manage-users-invite.qmd
@@ -4,9 +4,9 @@
 
     - Enter the user's **[email]{.smallcaps}** address.
     - Assign the user to a group from the **[group]{.smallcaps}** dropdown menu.
-    - Click **+** under [role]{.smallcap} to open the Assign Roles menu for that user:
+    - Click **{{< fa plus >}}** under [role]{.smallcap} to open the Assign Roles menu for that user:
 
-        a. Click **+** next to the role for each role to be assigned.  
+        a. Click **{{< fa plus >}}** next to the role for each role to be assigned.  
         b. Click **Assign Roles to Invitee**.
 
 1. Click **{{< fa envelope >}} Send Invite**.
