--- a/site/guide/configuration/manage-users.qmd
+++ b/site/guide/configuration/manage-users.qmd
@@ -42,7 +42,7 @@ Invite new users and review your current users from within the user directory. U
 
 3. Next to any individual user, click the {{< fa circle-plus >}} icon to open the Assign Roles menu for that user. 
 
-4. Click **+** next to the role for each role to be assigned.  
+4. Click **{{< fa plus >}}** next to the role for each role to be assigned.  
 
 5. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
 
