--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -198,7 +198,7 @@ can be configured to suit your needs.
 To start the documentation process, <br>
 a model must already be registered <br>
 in the model inventory via the <br>
-**+ Register Model** modal.
+**{{< fa plus >}} Register Model** modal.
 :::
 
 **Let's register a model together** on <br>
@@ -221,7 +221,7 @@ for a new model:
   You can fill in other options<br> according to your preference.
 :::
 
-2. Click **Register Model** to <br>
+2. Click **{{< fa plus >}} Register Model** to <br>
 add the model to your <br>
 inventory.
 
